# mcp-file-lens

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
.ruler/: 10-introduction.md  20-python-guidelines.md  30-project-structure.md  40-code-guidelines.md  41-doc-guidelines.md  mcp.json  ruler.toml
src/mcp_file_lens/: __init__.py  __main__.py  security.py  server.py
tests/: __init__.py  test_security.py  test_server.py
